[package]
name = "valid"
version = "0.2.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true }
regexp = { version = "0.3", optional = true }

[features]
default = [ "json", "regexp" ]
json = [ "serde_json", "serde" ]
